--- a/index.html
+++ b/index.html
@@ -21,9 +21,17 @@
     <main>
         <h2>CIT 260 Competency Portal</h2>
         <ul>
-            <li>Lesson 02: <a href="lesson2/design-principles.html" >Design Principles</a></li>
-            <li>Lesson 03: <a href="lesson3/index.html">Website Planning Document</a></li>
-            <li>Lesson 04: <a href="...">Link</a> | <a href="...">Link</a></li>
+            <li><b>JavaScript -</b> Loops, Conditional Statements, Functions, Variables, Parameters, Arrays, Associative Arrays</li>
+            <li><b>JavaScript Objects -</b> Object Creation Functions, Inheritance, Properties, Methods, Instantiation</li>
+            <li><b>JSON - </b>Parse, Stringify</li>
+            <li><b>AJAX - </b>Using XMLHTTPRequest to Consume a JSON Web Service</li>
+            <li><b>Local Storage </b>API, Storing and Retrieving Simple Data, Arrays, Associative Arrays, and Objects</li>
+            <li><b>DOM</b> Manipulation Using createElement, appendChild, insertBefore, removeChild, etc.</li>
+            <li>Manipulating <b></b>CSS Class Properties Using JavaScript</b></li>
+            <li>Creating <b>CSS3 Transitions and Animations</b> in CSS and triggering them <b></b>with JavaScript</b></li>
+            <li>Standard JavaScript Events Including those for Mobile Devices ( Ex. onTouchBegin, onLoad, etc.) and Animation and Transition Events</li>
+            <li><b>HTML5 Tags -</b> Video, Audio, and Canvas</li>
+            <li>Designing, Defining, and Triggering CSS3 Transitions without Custom Libraries</li>
         </ul>
     </main>
     <footer>
