--- a/index.html
+++ b/index.html
@@ -27,11 +27,13 @@
             <li><b>AJAX - </b>Using XMLHTTPRequest to Consume a JSON Web Service</li>
             <li><b>Local Storage </b>API, Storing and Retrieving Simple Data, Arrays, Associative Arrays, and Objects</li>
             <li><b>DOM</b> Manipulation Using createElement, appendChild, insertBefore, removeChild, etc.</li>
-            <li>Manipulating <b></b>CSS Class Properties Using JavaScript</b></li>
-            <li>Creating <b>CSS3 Transitions and Animations</b> in CSS and triggering them <b></b>with JavaScript</b></li>
-            <li>Standard JavaScript Events Including those for Mobile Devices ( Ex. onTouchBegin, onLoad, etc.) and Animation and Transition Events</li>
+            <li>Manipulating <b>CSS Class Properties Using JavaScript</b></li>
+            <li>Creating <b>CSS3 Transitions and Animations</b> in CSS and triggering them <b>with JavaScript</b></li>
+            <li>Standard <b>JavaScript Events</b> Including those for Mobile Devices ( Ex. onTouchBegin, onLoad, etc.) and Animation and Transition Events</li>
             <li><b>HTML5 Tags -</b> Video, Audio, and Canvas</li>
-            <li>Designing, Defining, and Triggering CSS3 Transitions without Custom Libraries</li>
+            <li>Designing, Defining, and Triggering <b>CSS3 Transitions</b> without Custom Libraries</li>
+            <li>Designing, Defining, and Triggering <b>CSS3 Transforms</b> without Custom Libraries</li>
+            <li>Designing, Defining, and Triggering <b>CSS3 Animations</b> without Custom Libraries</li>
         </ul>
     </main>
     <footer>
